Setting up repo and adding base component

--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.1",
+    "@material-ui/icons": "^4.2.0",
+    "axios": "^0.19.0",
     "react": "^16.8.6",
+    "react-dnd": "^8.0.2",
+    "react-dnd-html5-backend": "^8.0.2",
     "react-dom": "^16.8.6",
+    "react-iframe": "^1.8.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
