--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.1.1",
     "@material-ui/icons": "^4.2.0",
     "axios": "^0.19.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
     "react-dnd": "^8.0.2",
     "react-dnd-html5-backend": "^8.0.2",
