--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.1.1",
     "@material-ui/icons": "^4.2.0",
+    "@material-ui/styles": "^4.1.2",
     "axios": "^0.19.0",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
