--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
     "react-dnd": "^8.0.2",
     "react-dnd-html5-backend": "^8.0.2",
     "react-dom": "^16.8.6",
